# creditcard-mt940

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  render.yaml
.streamlit/: config.toml
src/creditcard_mt940/: __init__.py
src/creditcard_mt940/camt/: __init__.py  formatter.py
src/creditcard_mt940/mt940/: __init__.py  formatter.py
src/creditcard_mt940/parsers/: __init__.py  amex_parser.py  base_parser.py  csv_parser.py  excel_parser.py  ics_parser.py  ing_parser.py  parser_factory.py  rabobank_new_parser.py  rabobank_old_parser.py  rabobank_parser.py
src/creditcard_mt940/processors/: __init__.py  transaction_processor.py
src/creditcard_mt940/utils/: excel_template.py
tests/: test_amex_parser.py  test_camt053_formatter.py  test_csv_parser.py  test_ics_parser.py  test_ing_parser.py  test_mt940_formatter.py  test_parser_factory.py  test_rabobank_new_parser.py  test_rabobank_old_parser.py  test_rabobank_parser.py  test_transaction_processor.py
